--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "jquery": true,
     "amd": true
   },
+  "plugins": ["jsdoc"],
   "globals": {
   },
   "extends": "eslint:recommended",
@@ -19,8 +20,7 @@
     "no-extra-parens": "error",
     "no-prototype-builtins": "off",
     "no-template-curly-in-string": "error",
-    "no-unsafe-negation": "error",
-    "valid-jsdoc": "error",
+  "no-unsafe-negation": "error",
 
     // Best Practices
     "accessor-pairs": "error",
